pipfile change for python version compatibility

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -16,7 +16,7 @@ marshmallow-sqlalchemy = "*"
 requests = "*"
 
 [requires]
-python_version = "3.6"
+python_version >= "3.6"
 
 [pipenv]
 allow_prereleases = true
