--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -14,9 +14,7 @@ flask-restful = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 requests = "*"
-
-#[requires]
-#python_version = "3.6+"
+gunicorn = "*"
 
 [pipenv]
 allow_prereleases = true
