--- a/settings/api.service
+++ b/settings/api.service
@@ -5,9 +5,9 @@ After=network.target
 [Service]
 User=tianheng
 Group=www-data
-WorkingDirectory=/home/tianheng/vue-flask-sqlalchemy/backend 
+WorkingDirectory=/home/tianheng/vue-flask-sqlalchemy/backend
 Environment="PATH=/home/tianheng/.local/bin"  
-ExecStart=/home/tianheng/.local/bin/pipenv run uwsgi --ini app.ini
+ExecStart=/home/tianheng/.local/bin/uwsgi --ini app.ini
 
 [Install]
 WantedBy=multi-user.target
