--- a/settings/app.ini
+++ b/settings/app.ini
@@ -4,7 +4,7 @@ module = wsgi:app
 master = true  
 processes = 4
 
-socket = myproject.sock  
+socket = app.sock  
 chmod-socket = 660  
 vacuum = true
 
