--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -6,6 +6,7 @@ verify_ssl = true
 [dev-packages]
 black = "*"
 waitress = "*"
+dlib = {path = "./dlib-19.17.0-cp36-cp36m-win_amd64.whl"}
 v = {editable = true,version = "*"}
 
 [packages]
@@ -16,7 +17,7 @@ flask-restful = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 requests = "*"
-dlib = {path = "./dlib-19.17.0-cp36-cp36m-win_amd64.whl"}
+dlib = "*"
 face-recognition = "*"
 
 [pipenv]
