--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,10 @@
 aniso8601==7.0.0
-certifi==2019.3.9
+certifi==2019.6.16
 chardet==3.0.4
 click==7.0
+dlib==19.17.0
+face-recognition-models==0.3.0
+face-recognition==1.2.3
 flask-cors==3.0.8
 flask-marshmallow==0.10.1
 flask-restful==0.3.7
@@ -11,11 +14,13 @@ idna==2.8
 itsdangerous==1.1.0
 jinja2==2.10.1
 markupsafe==1.1.1
-marshmallow-sqlalchemy==0.16.3
-marshmallow==3.0.0rc6
+marshmallow-sqlalchemy==0.17.0
+marshmallow==3.0.0rc7
+numpy==1.16.4
+pillow==6.0.0
 pytz==2019.1
 requests==2.22.0
 six==1.12.0
-sqlalchemy==1.3.4
+sqlalchemy==1.3.5
 urllib3==1.25.3
 werkzeug==0.15.4
